--- a/config/samples/etcd_v1alpha1_etcdcluster.yaml
+++ b/config/samples/etcd_v1alpha1_etcdcluster.yaml
@@ -7,7 +7,7 @@ metadata:
     app.kubernetes.io/part-of: etcd-operator
     app.kubernetes.io/managed-by: kustomize
     app.kubernetes.io/created-by: etcd-operator
-  name: etcdcluster-sample
+  name: etcd
 spec:
   size: 3  # 副本数量
   image: docker.io/cnych/etcd:v3.4.13  # 镜像
