--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -49,3 +49,29 @@ rules:
   - get
   - patch
   - update
+- apiGroups:
+  - etcd.yj.io
+  resources:
+  - etcdbackups
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - etcd.yj.io
+  resources:
+  - etcdbackups/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - etcd.yj.io
+  resources:
+  - etcdbackups/status
+  verbs:
+  - get
+  - patch
+  - update
